[gd_scene load_steps=9 format=3 uid="uid://cp8hn10n1g3bm"]

[ext_resource type="Texture2D" path="res://assets/background/nature-forest-landscape-night-scene_1308-60557.jpg" id="1_2w35n"]
[ext_resource type="PackedScene" path="res://entities/cat2.tscn" id="1_psaak"]
[ext_resource type="PackedScene" uid="uid://b38p4r40u5v8i" path="res://entities/ufo.tscn" id="1_puoih"]
[ext_resource type="Script" path="res://scenes/Intro/intro.gd" id="1_xw7ws"]
[ext_resource type="PackedScene" path="res://entities/tim.tscn" id="2_axgmd"]
[ext_resource type="Texture2D" uid="uid://dogwlbpqs1f2l" path="res://scenes/Intro/beam.png" id="5_tb04q"]
[ext_resource type="AudioStream" path="res://assets/BGM/info upgrade Ludum Dare 38 - Track 10.wav" id="7_gcjvc"]
[ext_resource type="Texture2D" uid="uid://be44s50cc6ou0" path="res://scenes/Intro/titleintro.png" id="8_0m17q"]

[node name="Intro" type="Node2D"]
position = Vector2(-2, 0)
script = ExtResource("1_xw7ws")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Marker_cat" type="Marker2D" parent="."]
position = Vector2(466, 290)

[node name="Marker_tim" type="Marker2D" parent="."]
position = Vector2(500, -1072)

[node name="Marker_ufo" type="Marker2D" parent="."]
position = Vector2(478, -406)

[node name="Marker_ufo2" type="Marker2D" parent="."]
position = Vector2(1742, -416)

[node name="Nature-forest-landscape-night-scene1308-60557" type="Sprite2D" parent="."]
position = Vector2(1, 3)
scale = Vector2(1.41159, 1.47001)
texture = ExtResource("1_2w35n")

[node name="CharacterBody2D3" parent="." instance=ExtResource("1_psaak")]
position = Vector2(475, -725)

[node name="CharacterBody2D2" parent="." instance=ExtResource("2_axgmd")]
position = Vector2(475, 247)

[node name="Beam" type="Sprite2D" parent="."]
visible = false
position = Vector2(498, 264)
scale = Vector2(3.26523, 2.6875)
texture = ExtResource("5_tb04q")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_puoih")]
position = Vector2(-1626, -340)
scale = Vector2(0.545, 0.545)

[node name="Beam2" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="Beam3" type="Timer" parent="."]
wait_time = 17.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_gcjvc")
autoplay = true

[node name="Titleintro" type="Sprite2D" parent="."]
visible = false
position = Vector2(-142, -136)
texture = ExtResource("8_0m17q")

[node name="titletimer" type="Timer" parent="."]
wait_time = 21.0
autostart = true

[connection signal="timeout" from="Beam2" to="." method="_on_beam_2_timeout"]
[connection signal="timeout" from="Beam3" to="." method="_on_beam_3_timeout"]
[connection signal="timeout" from="titletimer" to="." method="_on_titletimer_timeout"]
